Added searchDistinctSubjectsBySubjectOrDelegateIdentity api
