# backend/typescript/controllers/relationship.controller.ts
@@ -15,7 +15,7 @@ export class RelationshipController {
     constructor(private relationshipModel:IRelationshipModel) {
     }
 
-    private findByIdentifier = async(req:Request, res:Response) => {
+    private findByIdentifier = async (req:Request, res:Response) => {
         const schema = {
             'identifier': {
                 in: 'params',
@@ -30,7 +30,7 @@ export class RelationshipController {
             .then(sendNotFoundError(res));
     };
 
-    private findPendingByInvitationCodeInDateRange = async(req:Request, res:Response) => {
+    private findPendingByInvitationCodeInDateRange = async (req:Request, res:Response) => {
         const schema = {
             'invitationCode': {
                 notEmpty: true,
@@ -44,7 +44,7 @@ export class RelationshipController {
             .then(sendNotFoundError(res));
     };
 
-    private acceptByInvitationCode = async(req:Request, res:Response) => {
+    private acceptByInvitationCode = async (req:Request, res:Response) => {
         const schema = {
             'invitationCode': {
                 notEmpty: true,
@@ -59,7 +59,7 @@ export class RelationshipController {
             .then(sendNotFoundError(res));
     };
 
-    private rejectByInvitationCode = async(req:Request, res:Response) => {
+    private rejectByInvitationCode = async (req:Request, res:Response) => {
         const schema = {
             'invitationCode': {
                 notEmpty: true,
@@ -74,7 +74,7 @@ export class RelationshipController {
             .then(sendNotFoundError(res));
     };
 
-    private notifyDelegateByInvitationCode = async(req:Request, res:Response) => {
+    private notifyDelegateByInvitationCode = async (req:Request, res:Response) => {
         const schema = {
             'invitationCode': {
                 notEmpty: true,
@@ -99,7 +99,7 @@ export class RelationshipController {
     };
 
     /* tslint:disable:max-func-body-length */
-    private listBySubjectOrDelegate = async(req:Request, res:Response) => {
+    private searchBySubjectOrDelegate = async (req:Request, res:Response) => {
         const schema = {
             'subject_or_delegate': {
                 in: 'params',
@@ -142,7 +142,42 @@ export class RelationshipController {
             .then(sendNotFoundError(res));
     };
 
-    private create = async(req:Request, res:Response) => {
+    private searchDistinctSubjectsBySubjectOrDelegateIdentity = async (req:Request, res:Response) => {
+        // todo need to optional filters (term, party type, relationship type, status)
+        // todo need to add sorting
+        const schema = {
+            'identity_id': {
+                in: 'params',
+                notEmpty: true,
+                errorMessage: 'Identity Id is not valid'
+            },
+            'page': {
+                in: 'query',
+                notEmpty: true,
+                isNumeric: {
+                    errorMessage: 'Page is not valid'
+                }
+            },
+            'pageSize': {
+                in: 'query',
+                optional: true,
+                isNumeric: {
+                    errorMessage: 'Page Size is not valid'
+                }
+            }
+        };
+        validateReqSchema(req, schema)
+            .then((req:Request) => this.relationshipModel.searchDistinctSubjectsBySubjectOrDelegateIdentity(
+                req.params.identity_id,
+                req.query.page,
+                req.query.pageSize)
+            )
+            .then((results) => (results.map((model) => model.toHrefValue(true))))
+            .then(sendSearchResult(res), sendError(res))
+            .then(sendNotFoundError(res));
+    };
+
+    private create = async (req:Request, res:Response) => {
         // TODO support other party types - currently only INDIVIDUAL is supported here
         // TODO how much of this validation should be in the data layer?
         // TODO decide how to handle dates - should they include time? or should server just use 12am AEST
@@ -273,7 +308,11 @@ export class RelationshipController {
 
         router.get('/v1/relationships/:subject_or_delegate/identity/:identity_id',
             security.isAuthenticated,
-            this.listBySubjectOrDelegate);
+            this.searchBySubjectOrDelegate);
+
+        router.get('/v1/relationships/identity/:identity_id/subjects',
+            security.isAuthenticated,
+            this.searchDistinctSubjectsBySubjectOrDelegateIdentity);
 
         router.post('/v1/relationship',
             security.isAuthenticated,
